Harden backend authentication, uploads and restricted diagnostics